# Oluko

./: .gitignore  README.md  oluko.html  oluko.md
Backend/: .gitignore  FRONTEND_INTEGRATION_GUIDE.md  LICENSE  README.md  all_code  build_errors.txt  pom.xml  temp_code.txt
Backend/neuronflow-agent/: agent.py  pyproject.toml
Backend/src/main/resources/: application.properties.example
Frontend/: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json
Frontend/public/: robots.txt  sitemap.xml
Frontend/src/: App.tsx  main.tsx  vite-env.d.ts
Frontend/src/components/layout/: Header.tsx
Frontend/src/components/lesson/: AgentVisualizer.tsx  AudioWaveform.tsx  CanvasRenderer.tsx  InteractiveWhiteboard.tsx  LessonControls.tsx  LessonRoom.tsx  LoadingScreen.tsx  StepProgress.tsx
Frontend/src/components/providers/: AuthMiddleware.tsx  ThemeProvider.tsx
Frontend/src/components/shared/: ThemeToggle.tsx
Frontend/src/components/ui/: Input.tsx  Progress.tsx  ToastContainer.tsx
Frontend/src/config/: routes.tsx
Frontend/src/lib/constants/: landing.ts
Frontend/src/lib/hooks/: index.ts  useClasses.ts  useStudyAnalytics.ts
Frontend/src/lib/services/: analyticsService.ts  apiClient.ts  authService.ts  classService.ts  courseService.ts  livekitService.ts  quizService.ts
Frontend/src/lib/store/: authStore.ts  courseGenerationStore.ts  toastStore.ts  whiteboardStore.ts
Frontend/src/lib/types/: constants.ts  index.ts  landing.ts
Frontend/src/lib/utils/: utils.ts  youtube.ts
Frontend/src/styles/: globals.css
(+106 files in other folders)
